[gd_scene load_steps=2 format=3 uid="uid://dngprbb1vvdir"]

[ext_resource type="Script" uid="uid://cck2kiod3smak" path="res://assets/game_manager/level_manager.gd" id="1_dsvfm"]

[node name="LevelManager" type="Node3D"]
script = ExtResource("1_dsvfm")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="LevelFinishDelay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LevelTransitionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
